Bug 390332 - Filename in fullscreen toolbar not updated after renaming image
Summary: Filename in fullscreen toolbar not updated after renaming image
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 17.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-12 17:21 UTC by null
Modified: 2018-02-25 13:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description null 2018-02-12 17:21:40 UTC
Open image in View mode, switch to fullscreen, press F2 or use sidebar to rename. Note how the slide-in toolbar at the top still shows the old filename afterwards.

Even toggling fullscreen back and forth does not help, only navigating between images.
Comment 1 Peter Mühlenpfordt 2018-02-25 13:12:42 UTC
Git commit 00ee923edea5196bbf11c046104d8a89d6331157 by Peter Mühlenpfordt, on behalf of Silas Lenz.
Committed on 25/02/2018 at 13:00.
Pushed by muhlenpfordt into branch 'Applications/17.12'.

Update filename in fullscreen view on rename

Summary:
When a file was renamed in fullscreen view the filename displayed in InformationLabel was not updated until you navigated to another image and back. This was  caused by the current url not being updated, which also resulted in edits and saves affecting the wrong image. This patch fixes the missing url update. Also makes full screen thumbnailBar scroll to the new file similar to other thumbnailviews.
Closes T8071

Test Plan:
Case 1:
1. Open image in fullscreen view.
2. Rename image using F2 or right click menu.
3. Verify that all visible filenames are updated, and that navigation between images still work.

Case 2:
1. Open image in normal view.
2. Rename image using F2 or Operations sidebar.
3. Verify that all visible filenames are updated, and that navigation between images still work.

Case 3:
1. Select image thumbnail in browse view.
2. Rename image using F2 or right click menu.
3. Verify that all visible filenames are updated, and that the image is still selected.

Reviewers: #gwenview, muhlenpfordt

Reviewed By: #gwenview, muhlenpfordt

Subscribers: rkflx, muhlenpfordt

Tags: #gwenview

Maniphest Tasks: T8071

Differential Revision: https://phabricator.kde.org/D10745

M  +2    -1    app/fileoperations.cpp
M  +1    -1    app/fileoperations.h
M  +1    -1    app/fileopscontextmanageritem.cpp
M  +1    -0    app/mainwindow.cpp

https://commits.kde.org/gwenview/00ee923edea5196bbf11c046104d8a89d6331157