Update filename in fullscreen view on rename

Summary:
When a file was renamed in fullscreen view the filename displayed in InformationLabel was not updated until you navigated to another image and back. This was  caused by the current url not being updated, which also resulted in edits and saves affecting the wrong image. This patch fixes the missing url update. Also makes full screen thumbnailBar scroll to the new file similar to other thumbnailviews.

BUG: 390332
Closes T8071

Test Plan:
Case 1:
1. Open image in fullscreen view.
2. Rename image using F2 or right click menu.
3. Verify that all visible filenames are updated, and that navigation between images still work.

Case 2:
1. Open image in normal view.
2. Rename image using F2 or Operations sidebar.
3. Verify that all visible filenames are updated, and that navigation between images still work.

Case 3:
1. Select image thumbnail in browse view.
2. Rename image using F2 or right click menu.
3. Verify that all visible filenames are updated, and that the image is still selected.

Reviewers: #gwenview, muhlenpfordt

Reviewed By: #gwenview, muhlenpfordt

Subscribers: rkflx, muhlenpfordt

Tags: #gwenview

Maniphest Tasks: T8071

Differential Revision: https://phabricator.kde.org/D10745