app/fileoperations.cpp
@@ -220,7 +220,7 @@ void showMenuForDroppedUrls(QWidget* parent, const QList<QUrl>& urlList, const Q
     KJobWidgets::setWindow(job, parent);
 }
 
-void rename(const QUrl &oldUrl, QWidget* parent)
+void rename(const QUrl &oldUrl, QWidget* parent, ContextManager* contextManager)
 {
     QString name = QInputDialog::getText(parent, 
                        i18nc("@title:window", "Rename") /* caption */,
@@ -240,6 +240,7 @@ void rename(const QUrl &oldUrl, QWidget* parent)
         job->uiDelegate()->showErrorMessage();
         return;
     }
+    contextManager->setCurrentUrl(newUrl);
     ThumbnailProvider::moveThumbnail(oldUrl, newUrl);
 }
 
